--- a/src/shared/environment/CMakeLists.txt
+++ b/src/shared/environment/CMakeLists.txt
@@ -1,34 +1,25 @@
-# Copyright (c) Orbbec Inc. All Rights Reserved.
-# Licensed under the MIT License.
+# src/shared/environment/CMakeLists.txt
+cmake_minimum_required(VERSION 3.10)
+project(environment)
 
-include(${OB_3RDPARTY_DIR}/cmrc/src/cmake_resource.cmake)
+# 自动查找所有源文件
+file(GLOB SOURCES "*.cpp" "*.c")
+file(GLOB HEADERS "*.hpp" "*.h")
 
-cmrc_add_resource_library(
-    env_config_rc
-    NAMESPACE
-    ob
-    WHENCE
-    ./
-    PREFIX
-    config
-    ./OrbbecSDKConfig.xml
-)
-
-add_library(ob::env_config_rc ALIAS env_config_rc)
-set_target_properties(env_config_rc PROPERTIES FOLDER "dependencies")
-
-configure_file(${CMAKE_CURRENT_LIST_DIR}/Version.hpp.in ${CMAKE_CURRENT_LIST_DIR}/Version.hpp)
-
-add_custom_command(
-    TARGET env_config_rc 
-    POST_BUILD
-    COMMAND ${CMAKE_COMMAND} -E copy "${CMAKE_CURRENT_LIST_DIR}/OrbbecSDKConfig.xml" "${OB_RESOURCES_OUTPUT_DIRECTORY}/OrbbecSDKConfig.xml"
-)
-
-if(OB_IS_MAIN_PROJECT)
-    install(FILES ${CMAKE_CURRENT_LIST_DIR}/OrbbecSDKConfig.xml DESTINATION shared)
-    install(FILES ${CMAKE_CURRENT_LIST_DIR}/OrbbecSDKConfig.md DESTINATION shared)
-
-    install(FILES ${CMAKE_CURRENT_LIST_DIR}/OrbbecSDKConfig.xml DESTINATION ${OB_EXTENSIONS_INSTALL_RPEFIX})
-    install(FILES ${CMAKE_CURRENT_LIST_DIR}/OrbbecSDKConfig.md DESTINATION ${OB_EXTENSIONS_INSTALL_RPEFIX})
+if(SOURCES)
+    message(STATUS "environment: Building with sources: ${SOURCES}")
+    add_library(environment ${SOURCES})
+    
+    if(HEADERS)
+        target_include_directories(environment PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+    endif()
+    
+    # 添加必要的链接库
+    if(OB_USE_SYSTEM_LIBS AND OB_TINYXML2_LIB)
+        target_link_libraries(environment ${OB_TINYXML2_LIB})
+    endif()
+else()
+    # 如果没有源文件，创建空的目标
+    message(STATUS "environment: No source files found, creating interface library")
+    add_library(environment INTERFACE)
 endif()
